Fixed bugs related to loading/importing scripts into suites. Implemented local suite playback across Selenium 1 and Selenium 2 scripts. (Suites can still only be saved when composed purely of Selenium-1 scripts as there is no Selenium-2 suite standard.)

--- a/seleniumbuilder/chrome/content/html/css/gui.css
+++ b/seleniumbuilder/chrome/content/html/css/gui.css
@@ -197,6 +197,14 @@ div.scriptselector select {
 New step styling.
 **/
 
+.b-suite-playback-script {
+  background: #dddddd;
+  -moz-border-radius: 5px;
+  margin: 2px;
+  margin-left: 102px;
+  padding: 1px;
+}
+
 #steplist {
   counter-reset: line-number;
   position: absolute;
