--- a/seleniumbuilder/chrome/content/html/css/windmill.css
+++ b/seleniumbuilder/chrome/content/html/css/windmill.css
@@ -268,7 +268,7 @@ ul#btns span.ui-icon {
     text-align: center;
 }
 
-/** Selenium Builder interface **/
+/** Se Builder interface **/
 .record-button {
     white-space: nowrap;
 }
